# mda_isaaclab

./: .gitignore  README.md  TASK319_DEVELOPMENT_REPORT.md
docs/task319_delivery/: COURSE_REPORT.md  DEBUG_REPORT.md  DELIVERY_CHECKLIST.md  PPT_OUTLINE.md  README.md  TASK319_DEFENSE_PPT.pptx  VIDEO_EVIDENCE.md
duarm/task_320_dual_arm_floor_sort/: README.md  __init__.py  area_layout.yaml  dual_arm_poses.yaml  floor_dual_arm_sort_demo.py  scene_layout.yaml
isaac_projects/: apple.usd  cardboard_box.glb  isaac_task_execution_result.json  isaac_task_execution_table.csv  simple-paper-cup.glb  soda_can.glb  target_layout_restore_log.json  trash_restore_log.json  trashbot_scene.usd  trashbot_scene_head_camera.usd  trashbot_scene_real_models.usd  v25_prepare_head_camera_search_pose_result.json  v25_robot_go_to_table_result.json  v25_ros_camera_graph_scan.json  v27_object_ground_truth_layout.json  v2_pixel_table_calibration.json  yolo_task_execution_log.json
isaac_projects/script/: reset_rubbish.py  v25_create_head_camera.py  v25_head_camera_single_target_executor.py  v25_prepare_head_camera_search_pose.py  v25_robot_go_to_table_search_pose.py  v25_switch_ros_camera_to_head_fixed.py  v26_active_view_search_isaac_server.py  v27_head_camera_action_server.py  v2_calibrate_pixel_table_homography_v23.py  v2_closed_loop_isaac_executor.py  v2_visual_grasp_executor.py
isaac_projects/usd_trash_models/: apple.usd  battery_low_poly.usd  cardboard_box.usd  low-poly_banana.usd  medicine_box.usd  paperball.usd  simple-paper-cup.usd  soda_can.usd
models/: README.md
models/graspnet-rs/: SOURCE.txt
models/yolo/: README.md
robot/: .gitignore  README.md  ROADMAP.md  SESSION_SUMMARY.md  requirements.txt  run_all.py  sandbox_ik_test.py  setup.py  全任务技术调研与系统架构设计.md  项目结构与系统数据流说明.md
robot/.bridge/: .gitignore
robot/config/: README.md  __init__.py  shared_parameters.yaml
robot/configs/: __init__.py  rekep_isaac_kuavo.yaml  task_22_dual_arm.yaml  task_319_garbage_sort.yaml  task_319_garbage_sort_all.yaml  task_319_kuavo_wheel.yaml  task_319_kuavo_wheel_s62.yaml  task_319_kuavo_wheel_s62_simdebug.yaml
robot/control/: __init__.py  backends.py  wbc.py  (+4 more)
robot/standalone_ik/: CMakeLists.txt  ik_wrapper.cpp
task319_local_grasp_rl/: README.md  RL_GRASP_REDESIGN_PROPOSAL.md  __init__.py  analyze_rl_training.py  collect_teleop_demos.py  local_suction_grasp_env.py  play.py  strict_physical_grasp_check.py  train.py  wandb.example.sh
task_319_garbage_sort/: .gitignore  CHANGELOG.md  DEMO_COMMANDS.md  DEPTH_VLM_GRASP_SORT_PLAN.md  NAV2_MOTION_IMPLEMENTATION.md  SAVE_TO_GITHUB.md  STABLE_GRASP_BASELINE_20260624.md  __init__.py  arm_chain_isolated_test.py  curobo_right_arm.py  gripper_physics_test.py  gripper_robot_urdf.py  ik_reach_compare_demo.py  official_holonomic_wheel_test.py  phase1_scene_ros2_bridge.py  task319_grasp_sort_sm.py  topdown_cube_grasp_test.py  two_finger_gripper.urdf  visual_grasp_pipeline.py  visual_grasp_record_demo.py
viss/: .env.example  .gitignore  readme.md
(+203 files in other folders)
